argocd/configs/infrastructure/ingressroute/manifests/homeassistant.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-langshi-external
  namespace: traefik
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: homeassistant-langshi-external
  namespace: traefik
subsets:
  - addresses:
      - ip: 192.168.50.120
    ports:
      - name: http
        port: 80
        protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant-langshi
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`langshi.hass.646499453.xyz`)
      kind: Rule
      services:
        - name: homeassistant-langshi-external
          port: 80
  tls:
    secretName: wildcards-646499453-xyz-tls
