argocd/configs/infrastructure/ingressroute/manifests/minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-truenas-external
  namespace: traefik
spec:
  ports:
    - name: http
      port: 9001
      targetPort: 9001
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: minio-truenas-external
  namespace: traefik
  labels:
    kubernetes.io/service-name: minio-truenas-external
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 9001
endpoints:
  - addresses:
      - 192.168.50.76
    conditions:
      ready: true
      serving: true
      terminating: false
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-truenas
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio.truenas.646499453.xyz`)
      kind: Rule
      services:
        - name: minio-truenas-external
          port: 9001
  tls:
    secretName: wildcards-646499453-xyz-tls
