argocd/configs/infrastructure/ingressroute/manifests/n8n.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-external
  namespace: traefik
spec:
  ports:
    - name: http
      port: 5678
      targetPort: 5678
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: n8n-external
  namespace: traefik
subsets:
  - addresses:
      - ip: 192.168.50.161
    ports:
      - name: http
        port: 5678
        protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: traefik
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "n8n"
    gethomepage.dev/description: "Workflow Automation"
    gethomepage.dev/group: "CI/CD"
    gethomepage.dev/icon: "sh-n8n.svg"
    gethomepage.dev/href: "https://n8n.646499453.xyz:8443"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`n8n.646499453.xyz`)
      kind: Rule
      middlewares:
        - name: authentik-forwardauth
      services:
        - name: n8n-external
          port: 5678
  tls:
    secretName: wildcards-646499453-xyz-tls
