argocd/configs/infrastructure/ingressroute/manifests/nexterm.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexterm
  namespace: traefik
spec:
  ports:
    - name: http
      port: 6989
      targetPort: 6989
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nexterm
  namespace: traefik
subsets:
  - addresses:
      - ip: 192.168.50.160
    ports:
      - name: http
        port: 6989
        protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nexterm
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nexterm.646499453.xyz`)
      kind: Rule
      services:
        - name: nexterm
          port: 6989
  tls:
    secretName: wildcards-646499453-xyz-tls
