argocd/configs/infrastructure/ingressroute/manifests/pbs.yaml
apiVersion: v1
kind: Service
metadata:
  name: pbs
  namespace: traefik
spec:
  ports:
    - name: https
      port: 8007
      targetPort: 8007
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pbs
  namespace: traefik
  labels:
    kubernetes.io/service-name: pbs
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 8007
endpoints:
  - addresses:
      - 192.168.50.154
    conditions:
      ready: true
      serving: true
      terminating: false
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pbs
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pbs.pve.646499453.xyz`)
      kind: Rule
      services:
        - name: pbs
          port: 8007
          scheme: https
          serversTransport: pbs-insecure-transport
  tls:
    secretName: wildcards-646499453-xyz-tls
