argocd/configs/infrastructure/ingressroute/manifests/pve.yaml
# ==========================================
# r720 Node
# ==========================================
apiVersion: v1
kind: Service
metadata:
  name: pve-r720
  namespace: traefik
spec:
  ports:
    - name: https
      port: 8006
      targetPort: 8006
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pve-r720
  namespace: traefik
  labels:
    kubernetes.io/service-name: pve-r720
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 8006
endpoints:
  - addresses:
      - 192.168.50.101
    conditions:
      ready: true
      serving: true
      terminating: false
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pve-r720
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`r720.pve.646499453.xyz`)
      kind: Rule
      services:
        - name: pve-r720
          port: 8006
          scheme: https
          serversTransport: pve-insecure-transport
  tls:
    secretName: wildcards-646499453-xyz-tls

---
# ==========================================
# n100x8 Node
# ==========================================
apiVersion: v1
kind: Service
metadata:
  name: pve-n100x8
  namespace: traefik
spec:
  ports:
    - name: https
      port: 8006
      targetPort: 8006
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pve-n100x8
  namespace: traefik
  labels:
    kubernetes.io/service-name: pve-n100x8
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 8006
endpoints:
  - addresses:
      - 192.168.50.102
    conditions:
      ready: true
      serving: true
      terminating: false
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pve-n100x8
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`n100x8.pve.646499453.xyz`)
      kind: Rule
      services:
        - name: pve-n100x8
          port: 8006
          scheme: https
          serversTransport: pve-insecure-transport
  tls:
    secretName: wildcards-646499453-xyz-tls

---
# ==========================================
# 3960x Node
# ==========================================
apiVersion: v1
kind: Service
metadata:
  name: pve-3960x
  namespace: traefik
spec:
  ports:
    - name: https
      port: 8006
      targetPort: 8006
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pve-3960x
  namespace: traefik
  labels:
    kubernetes.io/service-name: pve-3960x
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 8006
endpoints:
  - addresses:
      - 192.168.50.104
    conditions:
      ready: true
      serving: true
      terminating: false
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pve-3960x
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`3960x.pve.646499453.xyz`)
      kind: Rule
      services:
        - name: pve-3960x
          port: 8006
          scheme: https
          serversTransport: pve-insecure-transport
  tls:
    secretName: wildcards-646499453-xyz-tls

---
# ==========================================
# 1920x Node
# ==========================================
apiVersion: v1
kind: Service
metadata:
  name: pve-1920x
  namespace: traefik
spec:
  ports:
    - name: https
      port: 8006
      targetPort: 8006
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pve-1920x
  namespace: traefik
  labels:
    kubernetes.io/service-name: pve-1920x
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 8006
endpoints:
  - addresses:
      - 192.168.50.105
    conditions:
      ready: true
      serving: true
      terminating: false
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pve-1920x
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`1920x.pve.646499453.xyz`)
      kind: Rule
      services:
        - name: pve-1920x
          port: 8006
          scheme: https
          serversTransport: pve-insecure-transport
  tls:
    secretName: wildcards-646499453-xyz-tls
