argocd/configs/infrastructure/ingressroute/manifests/synology.yaml
apiVersion: v1
kind: Service
metadata:
  name: synology-external
  namespace: traefik
spec:
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
    - name: https
      port: 5001
      targetPort: 5001
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: synology-external
  namespace: traefik
  labels:
    kubernetes.io/service-name: synology-external
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 5000
  - name: https
    protocol: TCP
    port: 5001
endpoints:
  - addresses:
      - 192.168.50.77
    conditions:
      ready: true
      serving: true
      terminating: false
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: synology
  namespace: traefik
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`ds920.646499453.xyz`)
    services:
    - name: synology-external
      port: 5001
      scheme: https
      serversTransport: synology-insecure-transport
  tls:
    secretName: wildcards-646499453-xyz-tls
