argocd/configs/infrastructure/ingressroute/manifests/truenas.yaml
apiVersion: v1
kind: Service
metadata:
  name: truenas-external
  namespace: traefik
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas-external
  namespace: traefik
subsets:
  - addresses:
      - ip: 192.168.50.76
    ports:
      - name: http
        port: 80
        protocol: TCP
      - name: https
        port: 443
        protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: truenas
  namespace: traefik
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`truenas.646499453.xyz`)
    middlewares:
    - name: authentik-forwardauth
      namespace: traefik
    services:
    - name: truenas-external
      port: 443
      scheme: https
      serversTransport: truenas-insecure-transport
  tls:
    secretName: wildcards-646499453-xyz-tls
