argocd/configs/infrastructure/ingressroute/manifests/umami.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: umami
  namespace: umami
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Umami"
    gethomepage.dev/description: "Website Analytics"
    gethomepage.dev/group: "Dashboards"
    gethomepage.dev/icon: "umami.png"
    gethomepage.dev/href: "https://umami.646499453.xyz:8443"
    gethomepage.dev/pod-selector: "app=umami"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`umami.646499453.xyz`)
      kind: Rule
      services:
        - name: umami
          port: 3000
  tls:
    secretName: wildcards-646499453-xyz-tls
