argocd/configs/infrastructure/ingressroute/manifests/zot.yaml
apiVersion: v1
kind: Service
metadata:
  name: zot-external
  namespace: traefik
spec:
  type: ExternalName
  externalName: 192.168.50.125
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: zot-lan-only
  namespace: traefik
spec:
  ipAllowList:
    sourceRange:
      - 127.0.0.1/32
      - 192.168.0.0/16
      - 10.0.0.0/8
      - 172.16.0.0/12
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zot
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`zot.646499453.xyz`) || Host(`registry.646499453.xyz`)
      kind: Rule
      middlewares:
        - name: zot-lan-only
      services:
        - name: zot-external
          port: 8080
  tls:
    secretName: wildcards-646499453-xyz-tls
